--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <canvas class="myCanvas">
+      <p>2D items displayed in html canvas.</p>
+    </canvas>
   </body>
 </html>
